copies fields to clipboard

--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
     <container id="external-notes">
       <div></div>
     </container>
+    <container id="internal-notes">
+      <div></div>
+    </container>
     <script src="app.js"></script>
   </body>
 </html>
